findAndModify: Mongos WriteConcernError Behavior Differs from Mongod

XMLWordPrintableJSON

    • Query Execution
    • Minor Change
    • ALL
    • v8.0, v7.0, v6.0
    • QE 2024-12-09, QE 2024-12-23
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The changes for SERVER-78311 introduces mongos_noop_writes_wait_for_write_concern.js, a variant of noop_writes_wait_for_write_concern.js that goes through mongos. SERVER-78311 addresses inconsistencies that caused the update/insert commands to fail, but there are still a number of commands whose tests cases are disabled due to differing behavior.
      This ticket is spawned off from SERVER-80103 to investigate/address findAndModify.

            Assignee:
            Jan Steemann
            Reporter:
            Adi Zaimi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: