SERVER-97470 findAndModify: Mongos WriteConcernError Behavior Differs from Mongod (#29572)

GitOrigin-RevId: 969f4c2fa18f7f205c0614c5417f15907730321a