jstests/sharding/mongos_noop_writes_wait_for_write_concern.js
@@ -5,35 +5,23 @@
 
 import {getNoopWriteCommands} from "jstests/libs/noop_write_commands.js";
 import {ShardingTest} from "jstests/libs/shardingtest.js";
-import {assertWriteConcernError} from "jstests/libs/write_concern_util.js";
 
 // Create a shard with 3 nodes and stop one of the secondaries. This will allow majority write
 // concern to be met, but w: 3 will always time out.
-var st = new ShardingTest({mongos: 1, shards: 1, rs: {nodes: 3}});
+const st = new ShardingTest({mongos: 1, shards: 1, rs: {nodes: 3}});
 const secondary = st.rs0.getSecondary();
 st.rs0.stop(secondary);
 
 const mongos = st.s;
-var dbName = 'testDB';
-var db = mongos.getDB(dbName);
-var collName = 'testColl';
-var coll = db[collName];
-const commands = getNoopWriteCommands(coll);
+const dbName = 'testDB';
+const db = mongos.getDB(dbName);
+const collName = 'testColl';
+const coll = db[collName];
+const commands = getNoopWriteCommands(coll, "sharding");
 
-function dropTestCollection() {
-    coll.drop();
-    assert.eq(0, coll.find().itcount(), "test collection not empty");
-}
-
-function testCommandWithWriteConcern(cmd) {
+commands.forEach((cmd) => {
     if ("applyOps" in cmd.req) {
         // applyOps is not available through mongos.
-        return;
-    }
-
-    if ("findAndModify" in cmd.req) {
-        // TODO SERVER-80103: findAndModify does not return write concern errors in the presence of
-        // other errors.
         return;
     }
 
@@ -49,39 +37,13 @@ function testCommandWithWriteConcern(cmd) {
         return;
     }
 
-    // Provide a small wtimeout that we expect to time out.
-    cmd.req.writeConcern = {w: 3, wtimeout: 1000};
-    jsTest.log("Testing command: " + tojson(cmd.req));
-
-    dropTestCollection();
-
-    cmd.setupFunc();
-
     // We run the command on a different connection. If the the command were run on the
     // same connection, then the client last op for the noop write would be set by the setup
     // operation. By using a fresh connection the client last op begins as null.
     // This test explicitly tests that write concern for noop writes works when the
     // client last op has not already been set by a duplicate operation.
-    const shell2 = new Mongo(mongos.host);
-
-    // We check the error code of 'res' in the 'confirmFunc'.
-    const res = "bulkWrite" in cmd.req ? shell2.adminCommand(cmd.req)
-                                       : shell2.getDB(dbName).runCommand(cmd.req);
-
-    try {
-        // Tests that the command receives a write concern error. If we don't wait for write
-        // concern on noop writes then we won't get a write concern error.
-        assertWriteConcernError(res);
-        cmd.confirmFunc(res);
-    } catch (e) {
-        // Make sure that we print out the response.
-        printjson(res);
-        throw e;
-    }
-}
-
-commands.forEach(function(cmd) {
-    testCommandWithWriteConcern(cmd);
+    const shell = new Mongo(mongos.host);
+    cmd.run(dbName, coll, shell);
 });
 
 // Restart the node so that consistency checks performed by st.stop() can succeed.
